Forum icon IE fix

--- a/TheDailyWtf/Content/Css/main.less
+++ b/TheDailyWtf/Content/Css/main.less
@@ -401,7 +401,7 @@ a:hover {
         box-shadow: 0 8px 6px -6px @tdwtf-grey;
         margin-bottom: 15px;
         position: fixed;
-        top: 0px;
+        top: -5px;
         opacity: .95;
         background-color: @tdwtf-white;
         z-index: 3;
@@ -456,6 +456,7 @@ a:hover {
                     font-size: 15px;
                     font-weight: 800;
                     padding-bottom: 8px;
+                   
 
 
                     a {
@@ -571,6 +572,7 @@ a:hover {
                             img {
                                 margin-right: 5px;
                                 width: 15px;
+                                height:15px;
                                 float: left;
 
                                 &.hover-icon {
@@ -1417,7 +1419,7 @@ a:hover {
             .author-image-container {
                 width:25%;
                 display:table-cell;
-                padding-right:1%;
+                padding-right:2%;
                 vertical-align:middle;
                     @media(max-width: 500px) {
                 display: none;
